--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,5 @@
 name: NpcSkinPlugin
-main: com.tunombre.npcskin.NpcSkinPlugin
 version: 1.0
-api-version: 1.20
+main: com.flamingfran.npcskin.Main
+api-version: 1.16
 depend: [Citizens, ProtocolLib]
-author: TuNombre
