--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
     </repository>
+    <repository>
+      <id>protocol-lib-repo</id>
+      <url>https://repo.dmulloy2.net/repository/public/</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -54,7 +58,6 @@
 
   <build>
     <plugins>
-      <!-- Compila con Java 8+ -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
