--- a/pom.xml
+++ b/pom.xml
@@ -2,71 +2,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.github.FlamingFran</groupId>
-  <artifactId>NpcSkinPlugin</artifactId>
+  <groupId>com.tunombre</groupId>
+  <artifactId>npcskin</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>NpcSkinPlugin</name>
-  <description>Plugin que asigna la skin del jugador a un NPC con Citizens</description>
 
   <repositories>
     <repository>
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
-    <repository>
-      <id>citizens-repo</id>
-      <url>https://maven.citizensnpcs.co/repo</url>
-    </repository>
-    <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
-    </repository>
-    <repository>
-      <id>protocol-lib-repo</id>
-      <url>https://repo.dmulloy2.net/repository/public/</url>
-    </repository>
   </repositories>
 
   <dependencies>
-    <!-- Spigot API -->
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.19.4-R0.1-SNAPSHOT</version>
+      <version>1.16.5-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
-
-    <!-- Citizens -->
     <dependency>
       <groupId>net.citizensnpcs</groupId>
       <artifactId>citizens-main</artifactId>
       <version>2.0.30-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
-
-    <!-- ProtocolLib -->
-    <dependency>
-      <groupId>com.comphenix.protocol</groupId>
-      <artifactId>ProtocolLib</artifactId>
-      <version>4.8.0</version>
-      <scope>provided</scope>
-    </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
